syntax="proto3";
package gary.test;
// message comment??
message Foo
{
	double double_field = 1; // field comment??
	float float_field = 2;
	int32 int32_field = 3;
	int64 int64_field = 4;
	uint32 uint32_field = 5;
	uint64 uint64_field = 6;
	sint32 sint32_field = 7;
	sint64 sint64_field = 8;
	fixed32 fixed32_field = 9;
	fixed64 fixed64_field = 10;
	sfixed32 sfixed32_field = 11;
	sfixed64 sfixed64_field = 12;
	bool bool_field = 13;
	string string_field = 14;
	bytes bytes_field = 15;
	repeated int32 repeated_field = 16;
	Bar embedded_field = 17;
	repeated double double_packed_field = 18 [packed=true];
	repeated float float_packed_field = 19 [packed=true];
	repeated fixed32 fixed32_packed_field = 20 [packed=true];
	repeated fixed64 fixed64_packed_field = 21 [packed=true];
	repeated int32 int32_packed_field = 22 [packed=true];
	repeated sint32 sint32_packed_field = 23 [packed=true];
	repeated bool bool_packed_field = 24 [packed=true];
	Baz optional_embedded_field = 25;
	repeated Bar repeated_obj_field = 26;
	repeated string repeated_string_field = 27;
	enum Enum {
	    EnumOne = 0; // enum comment
	}
	message Embbeded {
	    int32 f1 = 1;
	    message Deep {
	        int32 f1 = 1;
	    }
	}
}

message Bar
{
	double double_field = 1;
}

message Baz
{
	int32 id = 1;
}

service Room
{
      rpc getByIds (GetByIdsRequest) returns (GetByIdsResponse);
}

message GetByIdsRequest
{
    repeated int32 ids = 1; // 房间号或者短位号
}

message GetByIdsResponse
{
    int32 code = 1;
    string msg = 2;
    map<int32, RoomInfo> data = 3; // 房间号或者短位号
    message RoomInfo {
        int32 room_id = 1;
    }
}